--- a/config.yml
+++ b/config.yml
@@ -30,3 +30,17 @@ params:
           url:  https://tryhackme.com/p/tinega
         - name: cv
           url: ""
+menu:
+  main:
+    - name: Categories
+      url:  /categories/
+      weight: 10
+    - name: Tags
+      url:  /tags/
+      weight: 20
+    - name: Experience
+      url:  /experience/
+      weight: 30
+    - name: Search
+      url:  /search/
+      weight: 40
